# CNES

./: CMakeLists.txt
include/bus/: bus.h  bus_types.h
include/cpu/: mos6502.h  mos6502_flags.h  mos6502_types.h
include/cpu/instructions/: instructions_address_modes.h  instructions_arithmetic.h  instructions_branch.h  instructions_comparisons.h  instructions_flags.h  instructions_increment_decrement.h  instructions_interrupts.h  instructions_jumps.h  instructions_logical.h  instructions_miscellaneous.h  instructions_shift_rotate.h  instructions_stack.h  instructions_transfer.h  instructions_type.h  optable.h
include/memory/: memorymap.h
src/: main.c
src/bus/: bus.c
src/cpu/: mos6502.c  mos6502_flags.c
src/cpu/instructions/: instructions_address_modes.c  instructions_increment_decrement.c  optable.c
test/: test_address_modes.c  test_address_modes.h  test_flags.c  test_flags.h  test_main.c  test_utils.h
